# Python

./: ClasseCane.py  Closure.py  Decoratore.py  DecoratoreStringhe.py  Esempio.py  EsercizioSemplice2.py  EsercizioSemplice3.py  EsercizioSemplice4.py  EsercizioSemplice5.py  EsercizioSemplice6.py  EsercizioSemplice7.py  EsercizioSemplice8.py  EspressioniGeneratrici.py  MatriceSuFile.py  ProgrammazioneFunzionale_1.py  ProgrammazioneFunzionale_10.py  ProgrammazioneFunzionale_2.py  ProgrammazioneFunzionale_3.py  ProgrammazioneFunzionale_9.py  Programmazione_Funzionale7.py  Programmazione_Funzionale_11.py  Programmazione_Funzionale_4.py  Programmazione_Funzionale_8.py  SommaArgomentiInteri.py  TestPerQuiz.py  concat.py  mansur.py  moltiplicazione_stringhe.py  persona.pkl  prodottoMatrici.c  prodottoMatrici.py  prova_esame.py  pyto.py  scratch.py  somma_int.py
Animale/: AnimaleTest.py  ClasseAnimale.py  ClasseCane.py  ClasseGatto.py  __init__.py  main.py  pyproject.toml
GestioneProgetto/: Attivita.py  Funziona.txt  Progetti.txt  Progetto.py  ProgettoTest.py  main.py  pyproject.toml
GestioneRicette/: Ricetta.py  Ricette.txt  RicetteEsportate.txt  Utente.py  main.py  parser.py  parsing.txt
ListaSpesa/: Lista.py  OggettoSpesa.py  lista.txt  main.py
Magazzino/: Utente.py  backUp.txt  magazzino.py  main.py  movimenti.txt  oggetto.py
Ospedale/: farmaco.py  main.py  paziente.py  terapia.txt
